--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue-test",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -13,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "lucide-vue-next": "^0.454.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -24,10 +25,13 @@
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.1.1",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.0",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.6"
